# CEUR-WS-Event-Series--SS23--Group-2

./: .gitignore  .project  .pydevproject  README.md  pyproject.toml
.github/workflows/: build.yml  linter.yml  upload-to-pypi.yml
data/: EventsWithoutSeries.json  optimal.json
eventseries/: README.md  event_series.pickle  main.py  matcher.py
eventseries/dblp/: DblpMatching.py  DblpParsing.py  DblpScraper.py  EventClasses.py  Readme.md  dblp.py
eventseries/import2Neo4j/: ImportData_temp.py  import_data.py
eventseries/matcher/: dblp_matcher.py  ngram_matcher.py  nlp_matcher.py  phrase_matcher.py  wikidata_matcher.py
eventseries/parsers/: event_extractor.py  volume_parser.py
eventseries/query/: queried_events.py
eventseries/resources/: all_matches.json  dblp_event_series.pickle  dblp_wikicfp.json  event_series.json  event_wikidata_with_Time_Acronym_Title.json  events.json  events_with_ordinal.json  events_without_matches.json  eventseries_wikicfp.json  query.json
eventseries/src/main/: main.py  test.py
eventseries/src/main/completeSeries/: cache_manager.py  check_annual_proceeding.py  series_completion.py
eventseries/src/main/dblp/: DblpMatching.py  DblpParsing.py  DblpScraper.py  EventClasses.py  EventSeries.py  Readme.md  VenueInformation.py  VenueInformationClasses.py  dblp.py  dblp_context.py  event_classes.py  matching.py  parsing.py  scraper.py  venue_information.py
eventseries/src/main/import2Neo4j/: ImportData.py  ImportData_temp.py  Neo4jDriver.py  import_data.py  neo_4j_connection.py
eventseries/src/main/matcher/: acronym_matcher.py  dblp_matcher.py  full_matcher.py  match.py  ngram_matcher.py  nlp_matcher.py  phrase_matcher.py  tfidf_matcher.py  wikidata_matcher.py
eventseries/src/main/parsers/: EventExtractor.py  event_extractor.py  ordiniality_extractor.py  volume_parser.py  volumeparser.py
eventseries/src/main/plp/: ordinal.py  parsing.py  signature.py  volumeparser.py
eventseries/src/main/query/: queriedEvents.py  queried_events.py  queried_proceedings.py  query_events.py  query_proceedings.py  query_series.py
eventseries/src/main/resources/: all_matches.json  ceurws_title.pickle  dblp_event_series.pickle  dblp_event_series_names.json  dblp_wikicfp.json  event_series.json  event_series.pickle  event_series_triples_wikidata.json  event_wikidata_matched.json  event_wikidata_with_Time_Acronym_Title.json  events.json  events_dblp_cfp.json  events_with_countries.json  events_with_ordinal.json  events_without_matches.json  eventseries_wikicfp.json  eventserise_wikicfp.json  person.json  query.json  wikidata_cfp_year_loc.json  wikidata_events.json
eventseries/src/main/util/: Event.py  Utility.py  cache.py  fetch_miscellaneous_event_series.py  matcher.py  record_attributes.py  utility.py
eventseries/src/main/wikicfp/: wikicfpMatch.py  wikicfp_events.py  wikicfp_search.py
eventseries/src/tests/query/: test_query_events.py
eventseries/src/tests/resources/: events.json
eventseries/src/tests/utility/: test_utility_checker.py
eventseries/util/: cache.py  record_attributes.py  utility.py
eventseries/wikicfp/: wikicfpMatch.py  wikicfp_events.py  wikicfp_search.py
notebooks/: event-series-matcher.ipynb  event_series_flattened.json  events-without-series.ipynb  events_without_containment_matches.json  eventseries2305.json  newtest.ipynb  nlp_matching.ipynb
scripts/: install  test
tests/: test_matcher.py
tests/src/main/matcher/: test_ngram_matcher.py  test_nlp_matcher.py  test_phrase_matcher.py  test_wikidata_matcher.py
tests/src/main/parsers/: test_event_extractor.py  test_volume_parser.py
(+4 files in other folders)
