[build-system]
# we use the hatch build system
# https://hatch.pypa.io/latest/config/build/
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eventseries"
authors = [
    { name = "Ayan Banerjee", email = "ayan.banerjee@rwth-aachen.de" }
]
maintainers = [
    { name = "Ayan Banerjee", email = "ayan.banerjee@rwth-aachen.de" },
]
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # pyLoDStorage
    'pyLoDStorage>=0.4.9',
    # https://github.com/pyparsing/pyparsing
    'pyparsing>=3.0.9',
    # https://github.com/savoirfairelinux/num2words
    'num2words>=0.5.9',
    # https://github.com/WolfgangFahl/pyLookupParser
    'pyLookupParser>=0.0.2',
    'beautifulsoup4>=4.12.2',
    'neo4j>=5.8',
    'spacy>3.4.0',
    'scikit-learn>=1.0.2',
    'nltk>=3.7',
    'pandas>=1.4.4',
    'numpy>=1.21.5'


]

install = [
    "python -m spacy download en_core_web_sm"
]

requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "eventseries/__init__.py"

[project.urls]
Home = "https://github.com/Ayan1089/CEUR-WS-Event-Series--SS23"
Documentation = "https://github.com/Ayan1089/CEUR-WS-Event-Series--SS23"
Source = "https://github.com/Ayan1089/CEUR-WS-Event-Series--SS23/wiki"

[project.optional-dependencies]
test = [
    "green",
]

[tool.hatch.build.targets.wheel]
packages = [
    "eventseries"
]